feat(workflow): streamline PRD and coding lifecycle